--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,9 @@ html {
     box-sizing: inherit;
 }
 
-.container{
-    max-width: 850px;
-    padding:25px;
-    margin:0 auto;
+.body{
+    background-color: gainsboro;
 }
-.form__input{
-    display:flex;
-    flex-grow: 1;
-    margin:10px;
-    padding:10px;
-    border:2px solid #ddd;
-}
-.form__button{
-    
-}
+
+
+
