--- a/css/tasks.css
+++ b/css/tasks.css
@@ -20,13 +20,34 @@
 .tasks__button {
     border: none;
     color: white;
-    background-color: green;
     width: 30px;
     height: 30px;
     padding: 0;
+    
 }
 
+.tasks__button--toggleDone {
+    background:green;
+    transform:1s;
+}
+    
+
+.tasks__button--toggleDone:hover {
+    background: rgb(3, 90, 3);
+}
+.tasks__button--toggleDone:active {
+    background: rgb(2, 158, 2);
+}
 
 .tasks__button--remove {
     background: red;
+    transform:1s;
+}
+.tasks__button--remove:hover{
+ background: rgb(185, 8, 8);
+ 
+ 
+}
+.tasks__button--remove:active{
+    background: rgb(201, 69, 69);
 }
