section styles added to css

--- a/css/section.css
+++ b/css/section.css
@@ -3,7 +3,7 @@
     background:white;
     box-shadow: 0 0 5px #ddd;
 }
-.section__header{
+.section__tittle{
     font-size:20px;
     padding:25px;
     margin:0;
@@ -11,4 +11,13 @@
 }
 .section__body {
     padding:25px;
+}
+.section__header{
+    border-bottom: 2px solid #ddd;
+    display:grid;
+    grid-template-columns: auto auto;
+    grid-gap:20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
