--- a/css/section.css
+++ b/css/section.css
@@ -5,19 +5,21 @@
 }
 .section__tittle{
     font-size:20px;
-    padding:25px;
-    margin:0;
-    border-bottom:2px solid #ddd;
+   margin:0;
+   padding:20px;
+  
 }
 .section__body {
     padding:25px;
+    border-top:1px solid #ddd;
 }
 .section__header{
-    border-bottom: 2px solid #ddd;
-    display:grid;
-    grid-template-columns: auto auto;
-    grid-gap:20px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+    
+   border-bottom: 2px solid #ddd;
+   display: grid;
+   grid-template-columns: auto auto;
+   grid-gap: 20px;
+   justify-content: space-between;
+   align-items: center;
+   padding: 20px;
 }
