--- a/css/form.css
+++ b/css/form.css
@@ -22,7 +22,7 @@
     background: teal;
     color: white;
     border: none;
-    
+    transition: 0.5s;
 }
 .form__button:hover{
     transform: scale( 1.1 );
