little amendments added

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,6 +1,7 @@
 .buttons {
     display: flex;
     flex-wrap: wrap;
+    size: 20px;
 }
 
 .buttons__button {
@@ -9,6 +10,7 @@
     border: none;
     margin: 0 0 0 20px;
     transition: color 0.3s;
+    
 }
 
 @media(max-width:767px) {
@@ -18,10 +20,11 @@
     }
 }
 
-.buttons__button:disabled {
-    color: #ccc;
-}
+
 
 .buttons__button:hover {
     color: rgb(6, 173, 173);
+}
+.buttons__button:disabled {
+    color: #ccc;
 }
