--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,6 @@ html {
 .body {
     font-family: 'Montserrat', sans-serif;
     background-color: gainsboro;
+    word-break: break-word;
     
 }
